# Classic-Stats-Tracker

./: .gitignore  Cargo.toml  README.md  build.rs
frontend/: package.json  pnpm-lock.yaml
frontend/public/: index.html
frontend/src/: App.svelte  EnemyIcon.svelte  EnemyList1.svelte  EnemyList2.svelte  MiscDeaths1.svelte  MiscDeaths2.svelte  StatIcon.svelte  constants.ts  stores.ts
src/: lib.rs  main.rs  mem_reader.rs  stats.rs
