[package]
edition = "2021"
name = "classic-stats-tracker"
version = "0.1.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
byteorder = "1"
futures = "0.3"
hyper = {version = "0.14", features = ["full"]}
hyper-tungstenite = "0.8"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
static-files = "0.2"
tokio = {version = "1", features = ["full"]}
tokio-stream = "0.1"
winapi = {version = "0.3.9", features = [
  "handleapi",
  "memoryapi",
  "minwinbase",
  "ntdef",
  "processthreadsapi",
  "psapi",
  "tlhelp32",
  "winnt",
]}

[build-dependencies]
static-files = "0.2"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[profile.release]
lto = true 
opt-level = 'z' # Optimize for size.
panic = 'abort'
